'fixed some large screen layout issues'

--- a/frontend/src/components/Homepage.css
+++ b/frontend/src/components/Homepage.css
@@ -3,13 +3,17 @@
 }
 
 .homepage.grid {
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 100dvh;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+}
+
+@media(width > 45em) {
+  .decor-image {
+    max-height: 100dvh;
+  }
 }
 
 @media (max-width: 60em) {
   .homepage.grid { 
-    grid-template-rows: auto; 
     gap: 0;
   }
 
